# selenium-shop-python-tests

./: .pre-commit-config.yaml  .travis.yml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
fixtures/: constants.py
fixtures/locators/: balance.py  items.py  login.py  register.py
fixtures/models/: balance.py  register.py
fixtures/pages/: application.py  balance.py  base_page.py  items.py  login.py  register.py
tests/: test_balance.py  test_buy_item.py
tests/login/: test_login.py
tests/register/: test_register.py
