[tool.poetry]
name = "selenium-shop-python-tests"
version = "0.1.0"
description = "Selenium python ui tests"
authors = ["alexanderlozovoy <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.0"
pytest = "^6.2.5"
webdriver-manager = "^3.5.2"
Faker = "^9.8.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
